--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,13 +10,16 @@
     <div class="grid">
         <div class="block red"></div>
         <div class="block white"></div>
-        <div class="block white"></div>
         <div class="block blue"></div>
         <div class="block yellow"></div>
         <div class="block white"></div>
         <div class="block black"></div>
         <div class="block white"></div>
+        <div class="block red"></div>
+        <div class="block blue"></div>
+        <div class="block yellow"></div>
         <div class="block white"></div>
+        <div class="block black"></div>
     </div>
 </body>
 </html>
